--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,5 +37,6 @@
   <string name="selectable_text_pref_title">Selectable text</string>
   <string name="selectable_text_pref_summary_on">Uneditable text is selectable.</string>
   <string name="selectable_text_pref_summary_off">Uneditable text is not selectable.</string>
+  <string name="passphrase_name_fragment">Passphrase name fragment</string>
 
 </resources>
