--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,10 @@
   <string name="selectable_text_pref_title">Selectable text</string>
   <string name="selectable_text_pref_summary_on">Uneditable text is selectable.</string>
   <string name="selectable_text_pref_summary_off">Uneditable text is not selectable.</string>
-  <string name="passphrase_name_fragment">Passphrase name fragment</string>
+
+  <string name="passphrase_name_fragment">Name fragment</string>
+  <string name="search_description">Search for passphrases containing fragment text</string>
+  <string name="refresh_description">Refresh list of passphrases</string>
+  <string name="create_description">Create new passphrase</string>
 
 </resources>
