--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,5 +46,6 @@
   <string name="words">Words</string>
   <string name="length">Length</string>
   <string name="generate">Generate</string>
+  <string name="passphrase_details">Passphrase Details</string>
 
 </resources>
